--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@ header {
   margin: 0 auto;
   padding: 10px 0;
 }
+  /* ===== PC用 スライド ===== */
+.slide {
+  flex: 0 0 100%;
+  scroll-snap-align: center;
+  display: flex;
+  justify-content: center;
+}
 .slider::-webkit-scrollbar {
   display: none;
 }
