--- a/index.html
+++ b/index.html
@@ -250,6 +250,11 @@ header {
   display: flex;
   justify-content: center;
 }
+  .slide img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 .slider::-webkit-scrollbar {
   display: none;
 }
