--- a/index.html
+++ b/index.html
@@ -138,35 +138,7 @@ header {
   }
 }
 
-/* --------------- お困りごとありませんか --------------- */
-.overlay-image {
-  max-width: 500px;
-  margin: 5px auto -10px;
-  text-align: center;
-}
 
-.overlay-image img {
-  width: 100%;
-  -webkit-mask-image: radial-gradient(ellipse 120% 60% at 35% 50%, #000 40%, transparent 72%);
-  mask-image: radial-gradient(ellipse 120% 60% at 35% 50%, #000 40%, transparent 72%);
-}
-
-@media (max-width:480px) {
-  .overlay-image { max-width: 400px; }
-}
-
-.nigate-image {
-  max-width: 500px;
-  margin: -10px auto -10px;
-  text-align: center;
-}
-
-.nigate-image img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-  
 /* --------------- スライダー画像 --------------- */
 .slider-section {
   max-width: 900px;
@@ -641,24 +613,17 @@ footer {
 
   </div>
 </header>
-
-<div class="overlay-image">
-  <img src="お子さまのお困りごとありませんか.png">
-</div>
-
-<div class="nigate-image">
-  <img src="苦手.png" alt="">
-</div>
   
 <div class="slider-section">
   <button class="slide-arrow left">‹</button>
 
   <div class="slider-wrapper">
     <div class="slider">
-      <div class="slide bg1"><img src="支援の説明.png"></div>
+      <div class="slide bg1"><img src="お困りごと.png"></div>
       <div class="slide bg2"><img src="ノワールの得意なこと.png"></div>
       <div class="slide bg3"><img src="多様な専門職が在籍.png"></div>
-      <div class="slide bg4"><img src="生活面での不安や.png"></div>
+      <div class="slide bg4"><img src="支援の内容.png"></div>
+      <div class="slide bg5"><img src="生活面での不安や.png"></div>
     </div>
   </div>
 
