--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ header {
 /* --------------- スライダー画像 --------------- */
   .slider-section {
   max-width: 720px;     /* ← 画像と同じ幅 */
-  margin: 0 auto;
+  margin: 15px auto 0;
   padding: 0;           /* ← 重要：余白を消す */
   overflow: hidden;     /* ← 枠からはみ出さない */
   background: rgba(255,255,255,0.4);
@@ -171,8 +171,8 @@ header {
       }
 
 /* 位置 */
-.slide-arrow.left { left: 8px; }
-.slide-arrow.right { right: 8px; }
+.slide-arrow.left { left: 12px; }
+.slide-arrow.right { right: 12px; }
 
 /* 表示 */
 .slider-section:hover .slide-arrow {
