--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ header {
   padding: 0;           /* ← 重要：余白を消す */
   overflow: hidden;     /* ← 枠からはみ出さない */
   background: rgba(255,255,255,0.4);
-　}
+  position: relative;
+} 
 
      /* 矢印ボタン */
 .slide-arrow {
