--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ header {
         background: none;      /* ← 丸を消す */
         border: none;          /* ← 枠も消す */
         box-shadow: none;      /* ← 影も消す */
-
         font-size: 45px;       /* ← 少し大きめで可愛く */
+        font-weight: 300;
         color: #9F987D;
         cursor: pointer;
 
