--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ footer {
 </header>
   
 <div class="slider-section">
-  <button class="slide-arrow left">‹</button>
+ </div><button class="slide-arrow left">〈</button>
 
   <div class="slider-wrapper">
     <div class="slider">
@@ -620,8 +620,7 @@ footer {
     </div>
   </div>
 
-  <button class="slide-arrow right">›</button>
-</div>
+<button class="slide-arrow right">〉</button>
 
 <div class="slider-dots"></div>
  
