--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ footer {
 </header>
   
 <div class="slider-section">
- </div><button class="slide-arrow left">〈</button>
+ <button class="slide-arrow left">〈</button>
 
   <div class="slider-wrapper">
     <div class="slider">
@@ -621,7 +621,8 @@ footer {
   </div>
 
 <button class="slide-arrow right">〉</button>
-
+</div>
+  
 <div class="slider-dots"></div>
  
  <div class="toggle-container流れ" id="flow">
