--- a/index.html
+++ b/index.html
@@ -456,7 +456,8 @@ header {
   position: relative;   /* ← ★ここだけ */
   max-width: 550px;
   margin: 0 auto 20px;
-  padding-left: 1.6em;
+  padding-left: 1.8em;
+  font-size: 1.8em;
 }
 
 .access-text::before {
