--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ h2 {
 .header-center {
   text-align: center;
   font-size: 1.5em;
-  color: #333;
+  font-weight: 300
+  color: #9F987D;
   letter-spacing: 0.15em;
 }
 
@@ -164,7 +165,7 @@ h2 {
         background: none;      /* ← 丸を消す */
         border: none;          /* ← 枠も消す */
         box-shadow: none;      /* ← 影も消す */
-        font-size: 45px;       /* ← 少し大きめで可愛く */
+        font-size: 35px;       /* ← 少し大きめで可愛く */
         color: #9F987D;
         cursor: pointer;
 
@@ -177,8 +178,8 @@ h2 {
       }
 
 /* 位置 */
-.slide-arrow.left { left: 12px; }
-.slide-arrow.right { right: 12px; }
+.slide-arrow.left { left: 10px; }
+.slide-arrow.right { right: 10px; }
 
 /* 表示 */
 .slider-section:hover .slide-arrow {
