--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ h2 {
 .header-center {
   text-align: center;
   font-size: 1.5em;
-  font-weight: 300
+  font-weight: 300px;
   color: #9F987D;
   letter-spacing: 0.15em;
 }
