--- a/index.html
+++ b/index.html
@@ -146,53 +146,48 @@ h2 {
 }
 
 
-/* --------------- スライダー画像 --------------- */
-  .slider-section {
-  max-width: 720px;     /* ← 画像と同じ幅 */
+/* =================================================
+   スライダー全体（外枠）
+================================================= */
+.slider-section {
+  max-width: 720px;                 /* 画像幅に合わせる */
   margin: 15px auto 0;
-  padding: 0;           /* ← 重要：余白を消す */
-  overflow: hidden;     /* ← 枠からはみ出さない */
+  padding: 0;
+  overflow: hidden;                 /* はみ出し防止 */
   background: rgba(255,255,255,0.4);
   position: relative;
-} 
+}
 
-     /* 矢印ボタン */
+
+/* =================================================
+   矢印ボタン（PCのみ表示）
+================================================= */
 .slide-arrow {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
 
-        background: none;      /* ← 丸を消す */
-        border: none;          /* ← 枠も消す */
-        box-shadow: none;      /* ← 影も消す */
-        font-size: 35px;       /* ← 少し大きめで可愛く */
-        color: #9F987D;
-        cursor: pointer;
+  background: none;
+  border: none;
+  box-shadow: none;
+  padding: 0;
+  line-height: 1;
 
-        padding: 0;            /* ← ズレ防止 */
-        line-height: 1;        /* ← 中央ズレ防止 */
+  font-size: 35px;
+  color: #9F987D;
+  cursor: pointer;
 
-        opacity: 0;
-        transition: opacity 0.3s ease, transform 0.2s ease;
-        z-index: 10;
-      }
+  opacity: 0;                       /* 初期は非表示 */
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
 
-/* 位置 */
-.slide-arrow.left { left: 10px; }
+/* 左右位置 */
+.slide-arrow.left  { left: 10px; }
 .slide-arrow.right { right: 10px; }
 
-/* 表示 */
-.slider-section:hover .slide-arrow {
-  opacity: 1;
-}
-
-/* 初期は非表示 */
-.slide-arrow {
-  opacity: 0;
-  pointer-events: none;
-}
-
-/* PCでホバーした時だけ */
+/* PC：ホバー時だけ表示 */
 @media (hover: hover) and (pointer: fine) {
   .slider-section:hover .slide-arrow {
     opacity: 1;
@@ -200,80 +195,81 @@ h2 {
   }
 }
 
-/* スマホは完全非表示（今まで通り） */
+/* スマホ：完全非表示 */
 @media (max-width: 480px) {
   .slide-arrow {
     display: none;
   }
 }
 
-/* スライダー本体 */
-.slider {
+
+/* =================================================
+   スライダー本体（横スクロール）
+================================================= */
+.slider-wrapper {
   width: 100%;
+  overflow: hidden;
+}
+
+.slider {
   display: flex;
-  overflow-x: auto;
+  width: 100%;
+  overflow-x: auto;                 /* 横スクロール */
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
 }
 
+/* スクロールバー非表示 */
+.slider::-webkit-scrollbar {
+  display: none;
+}
+
+
+/* =================================================
+   各スライド
+================================================= */
 .slide {
   flex: 0 0 100%;
   scroll-snap-align: center;
 }
 
- .slide img {
+.slide img {
   width: 100%;
   height: auto;
   display: block;
 }
-.slider::-webkit-scrollbar {
-  display: none;
-}
-  
-.slider.dragging {
-  cursor: grabbing;
-}
 
-/* ===== スマホ用 ===== */
+
+/* =================================================
+   スマホ調整
+================================================= */
 @media (max-width: 480px) {
 
-  /* スライダーセクション */
   .slider-section {
-    background: none;      /* 背景消す */
-    padding: 0;
+    background: none;
     margin: 0;
   }
 
-  /* 外側ラッパー */
-  .slider-wrapper {
-  width: 100%;
-  overflow: hidden;
-}
-
-  /* スライダー本体 */
   .slider {
-    max-width: none;
     width: 100vw;
   }
 
-  /* 各スライド */
- .slide {
-  flex: 0 0 100%;
-  scroll-snap-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  .slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-  /* 画像 */
   .slide img {
-    width: 100%;
-    height: auto;
-    border-radius: 0;      /* 完全に角丸オフ */
+    border-radius: 0;
     object-fit: cover;
   }
 }
 
+
+/* =================================================
+   ドットナビ
+================================================= */
 .slider-dots {
   display: flex;
   justify-content: center;
@@ -286,15 +282,14 @@ h2 {
   height: 8px;
   border-radius: 50%;
   border: none;
-  background: #d6d2c4;
-  cursor: pointer;
   padding: 0;
+  cursor: pointer;
+  background: #d6d2c4;
 }
 
 .slider-dots button.active {
   background: #9F987D;
 }
-  
 /* ------------------ トグル ------------------ */
 /* PC用タイトル */
 .pc-title {
