--- a/index.html
+++ b/index.html
@@ -691,15 +691,15 @@ footer {
 <script>
 document.addEventListener('DOMContentLoaded', () => {
 
-> {
+/* ======================
+   ハンバーガーメニュー
+====================== */
+const menuToggle = document.getElementById('menu-toggle');
+const menu = document.getElementById('menu');
 
-  /* ===== ハンバーガーメニュー ===== */
-  const menuToggle = document.getElementById('menu-toggle');
-  const menu = document.getElementById('menu');
-
-  menuToggle.addEventListener('click', () => {
-    menu.classList.toggle('show');
-  });
+menuToggle.addEventListener('click', () => {
+  menu.classList.toggle('show');
+});
 
   /* ======================
      お問い合わせ表示＆スクロール
