--- a/index.html
+++ b/index.html
@@ -126,14 +126,16 @@ h2 {
   }
   
   .menu {
-    position: absolute;      /* ← これが核心 */
-    top: 100%;               /* ヘッダーの下端 */
-    right: 12px;             /* ☰の下に来る */
+    position: absolute;
+    top: 100%;                 /* ヘッダーの真下 */
+    left: 0;
+    width: 100%;               /* 横いっぱい */
     display: none !important;
-    grid-column: auto;
-    margin-top: 0;
-    background: none;        /* 白背景なし */
-    padding: 0;
+
+    background: rgba(169,169,169,0.9); /* ← 今の色合いに合わせる */
+    padding: 15px 20px;
+
+    text-align: center;
   }
 
   .menu.show {
@@ -142,8 +144,13 @@ h2 {
 
   .menu a {
     display: block;
-    margin: 10px 0;
-    font-size: 1.05em;
+    padding: 12px 0;
+    font-size: 1.1em;
+    color: #fff;
+  }
+
+  .menu a:not(:last-child) {
+    border-bottom: 1px solid rgba(255,255,255,0.3);
   }
 }
 
