--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@ h2 {
   
   .menu {
     position: absolute;
-    top: 100%;              /* ヘッダー直下 */
-    right: 10px;            /* ← 右に寄せる */
-    width: 70%;             /* ← 横幅を絞る */
-    max-width: 260px;       /* ← 大きくなりすぎ防止 */
+    top: 100%;
+    right: 0;               /* ← さらに右にピタッ */
+    width: 65%;             /* ← 少し細め */
+    max-width: 240px;
 
     display: none !important;
 
     background: rgba(169,169,169,0.9);
     padding: 14px 16px;
-    border-radius: 12px;
 
-    text-align: left;       /* ← 右寄せでも文字は左 */
+    border-radius: 0;       /* ← 角丸なし */
+    text-align: left;
   }
 
   .menu.show {
