--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h2 {
   text-align: center;
   font-size: 1.7em;
   font-weight: bold;
-  color: #9F987D;
+  color: #333;
   letter-spacing: 0.15em;
 }
 
