--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ h2 {
   font-weight: bold;
   color: #333;
   letter-spacing: 0.15em;
+  text-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
 
 /* ===== メニュー ===== */
