--- a/index.html
+++ b/index.html
@@ -504,16 +504,19 @@ h2 {
 
 .map-wrapper iframe {
   position: absolute;
-  inset: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  border: 0;
 }
 
 /* ------------------ お問い合わせ ------------------ */
 .contact-cta {
   text-align: center;
   margin: 50px 0 70px;
+  display: block;
+  position: relative;
+  z-index: 1;
 }
 
 .contact-cta a {
